20-03-08 Xavier Perseguers <xavier@perseguers.ch>
	* added retrieval and use of page author's name/email

20-02-08 Xavier Perseguers <xavier@perseguers.ch>
	* added support for multilingual feeds

18-02-08 Xavier Perseguers <xavier@perseguers.ch>
	* fixed PHP warning bugs

19-05-07 Fabien Udriot  <fabien.udriot@ecodev.ch>
	* first day, kick off in Torgon ;)