@@ -1,3 +1,6 @@
+22-04-08 Xavier Perseguers <xavier@perseguers.ch>
+	* added caching mechanism
+
 20-03-08 Xavier Perseguers <xavier@perseguers.ch>
 	* added retrieval and use of page author's name/email
 
